[tool.poetry]
name = "qiskit-summer-school-25"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
qiskit = ">=2.0.0"
qiskit-aer = ">=0.17.1"
jupyter = ">=1.1.1"
networkx = ">=3.5"
matplotlib = "3.10.0"
tqdm = ">=4.67.1"
scipy = "*"
numpy = "*"
jupytext = ">=1.17.2"
qedma-api = "0.18.3"
qiskit-ibm-runtime = ">=0.40.0"


[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.2.0"
ipykernel = ">=6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
